# recall

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY_TICKETS.md  FEATURES.md  README.md  REVIEW_TICKETS.md  docker-compose.yml  fly.toml
apps/api/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_indexes_and_constraints.py  0003_fk_cascades.py  0004_chat_summary.py  0005_message_feedback.py  0006_chat_pinned.py  0007_users_custom_instructions_locale.py  0008_create_todo_items.py  0009_add_search_indexes.py  0010_create_templates_suggestions.py  0011_add_messages_user_id_index.py  0012_add_todo_topic.py  0013_add_user_timezone.py  0014_add_todo_due_at.py  0015_create_projects.py  0016_create_project_items.py  0017_language_vocab_fields.py  0018_add_todo_sort_order.py  0019_memory_section_per_type.py  0020_user_plan_enabled_models.py  0021_perf_indexes.py  0022_add_user_location.py  0023_user_calendar_connections.py  0024_gmail_suggested_reminders.py  0025_push_tokens.py  0026_attachments.py  0027_pgvector_memories.py  0028_chat_project_id.py  0029_chat_archived.py  0030_user_response_tone.py  0031_push_preferences.py  0032_user_reminder_lead.py  0033_pgvector_real.py  0034_user_location_enabled.py  0035_message_check_constraints.py  0036_builtin_template_title_unique.py  0037_drop_templates_table.py  0038_user_apple_sub.py  0039_projects_daily_goal.py  0040_chat_quiz_mode.py  (+24 more)
apps/api/app/: exceptions.py  main.py  worker_health.py  worker_main.py
apps/api/app/background/: attachment_indexing.py  attachment_orphan_reaper.py  compaction.py  email_reminder_scheduler.py  gmail_periodic_sync.py  gmail_sync.py  memory_consolidation.py  memory_extraction.py  project_sync.py  push_scheduler.py  suggestion_generation.py  tasks.py  todo_sync.py  topic_generation.py
apps/api/app/content/: legal.py
apps/api/app/core/: access_tokens.py  background_tasks.py  chat_rate_limit.py  client_ip.py  config.py  database_url.py  db.py  deps.py  dev_guards.py  ids.py  jobs.py  logging.py  rate_limit.py  redis.py  redis_lock.py  request_id.py  rest_rate_limit.py  secrets.py  security_headers.py  sentry.py  validation.py
apps/api/app/gateways/: apple_auth.py  email_gateway.py  embedding_gateway.py  expo_push_gateway.py  google_auth.py  google_calendar_gateway.py  google_gmail_gateway.py  google_oauth.py  google_oauth_revoke.py  http_client.py  image_gateway.py  litellm_gateway.py  mock_llm.py  openrouter_images.py  pronunciation_lookup.py  revenuecat_gateway.py  safe_fetch.py  speech_gateway.py  storage_gateway.py  web_search_gateway.py
apps/api/app/gateways/mcp/: __init__.py  base.py  calendar_adapter.py  image_gen_adapter.py  registry.py  sympy_adapter.py  web_search_adapter.py
apps/api/app/models/: math_schemas.py  orm.py  schemas.py  tool_schemas.py
apps/api/app/models/schemas/: __init__.py  attachments.py  auth.py  chats.py  common.py  home.py  integrations.py  memory.py  projects.py  todos.py
apps/api/app/repositories/: attachment_chunks.py  attachments.py  calendar_connections.py  chats.py  gmail_connections.py  memories.py  messages.py  project_items.py  project_quiz_questions.py  projects.py  push_tokens.py  search.py  suggested_reminders.py  suggestions.py  templates.py  todos.py  usage.py  users.py
apps/api/app/routers/: admin.py  attachments.py  auth.py  chat_stream.py  chats.py  gmail_integrations.py  health.py  home.py  images.py  integrations.py  legal.py  link_preview.py  memories.py  models.py  projects.py  search.py  speech.py  suggestions.py  templates.py  todos.py  users.py  webhooks.py  ws.py
apps/api/app/services/: action_dispatch.py  attachment_content.py  attachment_lifecycle.py  attachment_rag.py  attachment_upload.py  auth.py  calendar.py  calendar_nudges.py  chat.py  chat_titles.py  chat_tools.py  chats.py  context_window.py  daily_learning.py  day_planning.py  email.py  email_triage.py  export_service.py  google_integrations.py  home.py  ics_parser.py  image_gen_intent.py  image_generation.py  learning_insights.py  learning_nudges.py  link_preview.py  locale.py  math_fence.py  math_image_extract.py  math_service.py  math_text_match.py  math_tools.py  memory.py  memory_llm.py  model_catalog.py  model_health.py  plan.py  profile.py  programming_curriculum.py  project_daily_quiz.py  (+24 more)
apps/api/app/services/chat/: __init__.py  finalize_registry.py  post_turn.py  prompt_builder.py  prompt_constants.py  quiz_messages.py  stream.py  stream_events.py  stream_status.py  summarize.py  turn_prep.py  turn_timing.py
apps/api/app/services/home/: __init__.py  integration_starters.py  memory_starters.py  project_starters.py  time_starters.py  util.py
apps/api/app/services/projects/: __init__.py  actions.py  common.py  crud.py  extract.py  items.py  prompt_context.py  prompts.py  quiz_context.py  quiz_grading.py  stats.py  sync.py
apps/api/app/services/todos/: __init__.py  actions.py  classification.py  crud.py  extract.py  prompt_context.py  prompt_hint.py  reminder_fences.py  sync.py
apps/api/app/services/web_search/: __init__.py  augment.py  classify.py  detection.py  formatting.py  geo_intent.py  patterns.py  query_builders.py  (+2 more)
apps/api/app/tests/: conftest.py  test_account.py  test_apple_auth.py  test_attachment_content.py  test_auth_dev.py  test_calendar_write.py  test_chat_stream.py  test_chat_titles.py  test_client_ip.py  test_compaction.py  test_config.py  test_context_window.py  test_core_logging_sentry.py  test_deps.py  test_dev_guards.py  test_exceptions.py  test_expo_push_gateway.py  test_gateways.py  test_gmail.py  test_health.py  test_jobs.py  test_legal.py  test_main_lifespan.py  test_mcp.py  test_messages_page.py  test_misc.py  test_new_features.py  test_optimizations.py  test_profile.py  test_prompt_safety.py  test_push_scheduler.py  test_rag.py  test_redis_lock.py  test_redis_unavailable.py  test_request_id.py  test_rest_rate_limit.py  test_routers.py  test_routers_attachments.py  test_routers_images.py  test_routers_projects.py  (+9 more)
(+740 files in other folders)
