[project]
name = "recall-api"
version = "0.1.0"
description = "Recall personal AI chat backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "google-auth>=2.37.0",
    "httpx>=0.28.0",
    "litellm>=1.55.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.10.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.26.0",
    "httpx>=0.28.0",
    "mypy>=1.14.0,<1.16",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0,<0.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "B", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["UP", "I", "S"]
"app/tests/**" = ["S101", "S105", "S106"]
"app/routers/**" = ["B008"]
"app/core/deps.py" = ["B008"]
"app/core/config.py" = ["S105"]
"app/models/schemas.py" = ["S105"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
files = ["app"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "alembic/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
