[project]
name = "recall-api"
version = "0.1.0"
description = "Recall personal AI chat backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "ddgs>=9.14.4",
    "fastapi>=0.115.0",
    "google-auth>=2.37.0",
    "httpx>=0.28.0",
    "litellm>=1.55.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.10.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pypdf>=5.1.0",
    "pgvector>=0.3.5",
    "sympy>=1.13.0",
    "numpy>=2.0.0",
    "cryptography>=44.0.0",
    "boto3>=1.35.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.26.0",
    "httpx>=0.28.0",
    "mypy>=1.14.0,<1.16",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0,<0.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "B", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["UP", "I", "S", "E501"]
"app/tests/**" = ["S101", "S105", "S106", "RUF001", "RUF012", "E402", "E501"]
"app/routers/**" = ["B008", "E501"]
"app/gateways/**" = ["S105", "E501"]
"app/gateways/storage_gateway.py" = ["S105", "S108"]
"app/models/orm.py" = ["E501"]
"app/repositories/project_items.py" = ["RUF005"]
"app/services/chat.py" = ["E501"]
"app/services/calendar.py" = ["E501", "RUF001"]
"app/services/home.py" = ["E501", "E402"]
"app/services/math_tools.py" = ["E501", "RUF001"]
"app/services/math_service.py" = ["E501", "S112"]
"app/services/projects.py" = ["E501", "RUF001"]
"app/services/transactional_email.py" = ["RUF001", "RUF002", "RUF003"]
"app/services/push_notifications.py" = ["RUF001", "RUF002", "RUF003"]
"app/services/todos.py" = ["E501", "S101"]
"app/services/web_search.py" = ["E501", "RUF002"]
"app/services/seed_templates.py" = ["E501"]
"app/core/deps.py" = ["B008"]
"app/core/config.py" = ["S105"]
"app/models/schemas.py" = ["S105"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
files = ["app"]

[[tool.mypy.overrides]]
module = [
    "app.services.projects",
    "app.repositories.search",
    "app.repositories.push_tokens",
    "app.repositories.project_items",
    "app.repositories.messages",
    "app.gateways.mock_llm",
    "app.gateways.google_calendar_gateway",
    "app.services.email",
    "app.services.chat",
    "app.routers.ws",
    "app.tests.services.test_plan",
]
ignore_errors = true

[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "alembic/*",
    # External OAuth / scheduler boundaries — covered via service-layer mocks.
    "app/gateways/google_calendar_gateway.py",
    "app/gateways/google_gmail_gateway.py",
    "app/background/gmail_periodic_sync.py",
    "app/background/gmail_sync.py",
    "app/background/push_scheduler.py",
    "app/routers/gmail_integrations.py",
    "app/routers/integrations.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
