[project]
name = "recall-api"
version = "0.1.0"
description = "Recall personal AI chat backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
# Upper bounds match the pattern already used for mypy/ruff: allow patch/minor
# within the locked band, block silent major/tooling jumps that break CI.
# Exact versions live in uv.lock (frozen install in CI).
dependencies = [
    "alembic>=1.14.0,<1.19",
    "asyncpg>=0.30.0,<0.32",
    "ddgs>=9.14.4,<10",
    "fastapi>=0.115.0,<0.139",
    "google-auth>=2.37.0,<2.56",
    "httpx>=0.28.0,<0.29",
    "litellm>=1.55.0,<1.90",
    "pydantic-settings>=2.6.0,<2.15",
    "pyjwt>=2.10.0,<2.14",
    "redis>=5.2.0,<8.1",
    "sqlalchemy[asyncio]>=2.0.51,<2.1",
    "uvicorn[standard]>=0.51.0,<0.52",
    "websockets>=14.0,<17",
    "pypdf>=5.1.0,<6.15",
    "python-docx>=1.1.0,<1.3",
    "python-multipart>=0.0.20,<0.0.33",
    "pgvector>=0.3.5,<0.5",
    "sympy>=1.13.0,<1.15",
    "numpy>=2.0.0,<2.6",
    "cryptography>=44.0.0,<50",
    "boto3>=1.35.0,<1.44",
    "sentry-sdk[fastapi]>=2.66.0,<2.67",
]

[dependency-groups]
dev = [
    "fakeredis>=2.26.0,<2.37",
    "httpx>=0.28.0,<0.29",
    "mypy>=1.14.0,<1.16",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.24.0,<1.5",
    "pytest-cov>=6.0.0,<8",
    "ruff>=0.8.0,<0.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["app/tests"]
addopts = ["--assert=plain", "--import-mode=importlib"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "B", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["UP", "I", "S", "E501"]
"app/tests/**" = ["S101", "S105", "S106", "RUF001", "RUF012", "E402", "E501"]
"app/routers/**" = ["B008", "E501"]
"app/gateways/**" = ["S105", "E501"]
"app/gateways/storage_gateway.py" = ["S105", "S108"]
"app/models/orm.py" = ["E501"]
"app/repositories/project_items.py" = ["RUF005"]
"app/services/chat/**" = ["E501"]
"app/services/calendar.py" = ["E501", "RUF001"]
"app/services/home.py" = ["E501", "E402"]
"app/services/math_tools.py" = ["E501", "RUF001"]
"app/services/math_service.py" = ["E501", "S112"]
"app/services/projects/**" = ["E501", "RUF001"]
"app/services/transactional_email.py" = ["RUF001", "RUF002", "RUF003"]
"app/services/calendar_nudges.py" = ["RUF001"]
"app/services/push_notifications.py" = ["RUF001", "RUF002", "RUF003"]
"app/services/reminder_timing.py" = ["RUF001", "RUF002", "RUF003"]
"app/services/todos/**" = ["E501", "S101"]
"app/services/web_search/*.py" = ["E501", "RUF002"]
"app/core/deps.py" = ["B008"]
"app/core/config.py" = ["S105"]
"app/models/schemas/**" = ["S105"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
files = ["app"]

# Incremental strict: expand package by package. Do not flip global `strict` —
# in mypy <2.x, `strict = true` in overrides leaks globally. Use expanded
# --strict flags per module instead.
[[tool.mypy.overrides]]
module = [
    "app.core",
    "app.core.*",
    "app.exceptions",
    "app.models.schemas",
    "app.models.schemas.*",
    "app.repositories",
    "app.repositories.*",
    "app.services.attachment_content",
    "app.services.attachment_upload",
    "app.services.quota",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "alembic/*",
    # External OAuth / scheduler boundaries — covered via service-layer mocks.
    "app/gateways/google_calendar_gateway.py",
    "app/gateways/google_gmail_gateway.py",
    "app/background/gmail_periodic_sync.py",
    "app/background/gmail_sync.py",
    "app/background/push_scheduler.py",
    "app/routers/gmail_integrations.py",
    "app/routers/integrations.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
